Phase 2 complete: Added user login and registration system, SQLite support, and CLI improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,15 @@ project(WeatherApp)
 
 set(CMAKE_CXX_STANDARD 20)
 
+add_definitions(-DDEBUG)
+
 # Find and link libcurl
 find_package(CURL REQUIRED)
+
+# Include directories
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(/opt/homebrew/opt/curl/include)
+include_directories(/opt/homebrew/opt/sqlite/include)
 include_directories(/opt/homebrew/include)
 
 # Add executable and include all source files
@@ -14,7 +19,10 @@ add_executable(WeatherApp
         src/main.cpp
         src/WeatherAPI.cpp
         src/WeatherData.cpp
-        src/WeatherUI.cpp)
+        src/WeatherUI.cpp
+        src/DatabaseManager.cpp
+        include/DatabaseManager.h
+        src/DatabaseManager.cpp)
 
 # Link libraries
-target_link_libraries(WeatherApp curl)
+target_link_libraries(WeatherApp curl sqlite3)
